--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 <body>
     <h1>张张张彦康的首页</h1>
     <a href="zhangyankang521.github.io">我的个人介绍（未完工）</a>
+    <a href="zhangyankang521.github.io/me">我的个人介绍（未完工）</a>
+    <a href="616.sb">phigros下载</a>
 </body>
 </html>
