--- a/js.html
+++ b/js.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>我的介绍</title>
 </head>
 <body>
-    <h1>我的介绍</h1>
-    我是一个平平无奇的人
-    我爱玩mc和phigros
-    有机会可以跟我一起玩
-    <a href="zhangyankang521.github.io">返回主页</a>
+    <h1>我的介绍</h1><br>
+    <h2>我爱玩mc和phigros</h2><br>
+    <h2>有机会可以跟我一起玩</h2>
+    <h1><a href="zhangyankang521.github.io">返回主页</a></h1>
 </body>
 </html>
