--- a/js.html
+++ b/js.html
@@ -6,8 +6,8 @@
     <title>我的介绍</title>
 </head>
 <body>
-    <h1>我的介绍</h1><br>
-    <h2>我爱玩mc和phigros</h2><br>
+    <h1>我的介绍</h1>
+    <h2>我爱玩mc和phigros</h2>
     <h2>有机会可以跟我一起玩</h2>
     <h1><a href="zhangyankang521.github.io">返回主页</a></h1>
 </body>
