--- a/phi.html
+++ b/phi.html
@@ -6,7 +6,7 @@
     <title>phigros download</title>
 </head>
 <body>
-    <h2><a href="616.sb">点击下载</a></h2>
+    <h2><a href="https://616.sb">点击下载</a></h2>
     <h2><a href="zhangyankang521.github.io">返回主页</a></h2>
 </body>
 </html>
