--- a/tg.html
+++ b/tg.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>版本分享</title>
 </head>
 <body>
     <h1>版本分享</h1>
